add description in README, add params in swagger GET
